Fixed bug with song bar not showing proper slider value.

--- a/src/css/media-player/Bar.module.scss
+++ b/src/css/media-player/Bar.module.scss
@@ -7,6 +7,8 @@
 }
 
 .slider {
+  pointer-events: none;
+
   background: variables.$slider-color;
   transition: width 30ms, height 30ms;
 }
